中英文切换+面包屑导航优化

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -60,19 +60,21 @@
     "operation": "Operation",
     "status": "Status",
     "createTime": "Create Time",
-    "updateTime": "Update Time"
+    "updateTime": "Update Time",
+    "unknown": "Unknown"
   },
   "breadcrumb": {
     "home": "Home"
   },
   "goods": {
     "title": "Product Management",
+    "description": "Manage all product information and inventory",
     "productName": "Product Name",
     "productCategory": "Product Category",
     "productStatus": "Product Status",
     "productPrice": "Product Price",
     "stock": "Stock",
-    "description": "Product Description",
+    "productDescription": "Product Description",
     "createProduct": "Create Product",
     "editProduct": "Edit Product",
     "deleteProduct": "Delete Product",
@@ -91,6 +93,7 @@
   },
   "orders": {
     "title": "Order Management",
+    "description": "Manage all order information and processes",
     "orderNumber": "Order Number",
     "customerName": "Customer Name",
     "orderStatus": "Order Status",
@@ -110,7 +113,24 @@
   },
   "merchants": {
     "title": "Merchant Management",
+    "description": "Manage all merchant information on the platform",
+    "searchPlaceholder": "Search merchant name, contact, phone",
+    "statusFilter": "Status Filter",
+    "typeFilter": "Type Filter",
+    "batchDelete": "Batch Delete",
+    "merchantId": "Merchant ID",
     "merchantName": "Merchant Name",
+    "merchantType": "Merchant Type",
+    "contact": "Contact",
+    "phone": "Phone",
+    "serviceCharge": "Service Charge",
+    "address": "Address",
+    "noPhone": "No phone number",
+    "view": "View",
+    "merchant": "Merchant",
+    "deleteConfirm": "Are you sure to delete this merchant?",
+    "deleteWarning": "This action cannot be undone!",
+    "confirmDelete": "Confirm Delete",
     "contactPerson": "Contact Person",
     "contactPhone": "Contact Phone",
     "merchantStatus": "Merchant Status",
@@ -119,9 +139,25 @@
     "createMerchant": "Create Merchant",
     "editMerchant": "Edit Merchant",
     "viewMerchant": "View Merchant",
+    "addMerchant": "Add Merchant",
+    "merchantDetails": "Merchant Details",
+    "logoUrl": "Logo URL",
+    "taxNumber": "Tax Number",
+    "businessLicenseNumber": "Business License Number",
+    "inputMerchantName": "Please enter merchant name",
+    "merchantNameTooLong": "Merchant name cannot exceed 50 characters",
+    "selectMerchantType": "Please select merchant type",
     "active": "Active",
     "inactive": "Inactive",
-    "pending": "Pending"
+    "pending": "Pending",
+    "filterResults": "Filter Results",
+    "totalRecords": "Found {{total}} records",
+    "keyword": "Keyword",
+    "status": "Status",
+    "type": "Type",
+    "pagination": {
+      "showTotal": "{{start}}-{{end}} of {{total}} items"
+    }
   },
   "system": {
     "title": "System Settings",
@@ -137,5 +173,363 @@
     "createUser": "Create User",
     "editUser": "Edit User",
     "resetPassword": "Reset Password"
+  },
+  "login": {
+    "title": "User Login",
+    "username": "Username",
+    "password": "Password",
+    "captcha": "Captcha",
+    "rememberMe": "Remember Me",
+    "loginButton": "Login",
+    "forgotPassword": "Forgot Password?",
+    "usernamePlaceholder": "Please enter username",
+    "passwordPlaceholder": "Please enter password",
+    "captchaPlaceholder": "Please enter captcha",
+    "loginSuccess": "Login successful",
+    "loginFailed": "Login failed",
+    "invalidCredentials": "Invalid username or password",
+    "welcomeBack": "Welcome back"
+  },
+  "home": {
+    "title": "System Home",
+    "welcome": "Welcome to Management System",
+    "dashboard": "Dashboard",
+    "quickAccess": "Quick Access",
+    "recentActivity": "Recent Activity",
+    "systemStatus": "System Status",
+    "statistics": "Statistics",
+    "totalUsers": "Total Users",
+    "totalOrders": "Total Orders",
+    "totalRevenue": "Total Revenue",
+    "todayVisits": "Today's Visits"
+  },
+  "notFound": {
+    "title": "Page Not Found",
+    "description": "Sorry, the page you visited does not exist",
+    "backHome": "Back to Home",
+    "errorCode": "Error Code: 404"
+  },
+  "inventory": {
+    "currentStock": "Current Stock",
+    "stockIn": "Stock In",
+    "stockOut": "Stock Out",
+    "stocktake": "Stocktake",
+    "stockDetails": "Stock Details",
+    "productCode": "Product Code",
+    "productName": "Product Name",
+    "currentQuantity": "Current Quantity",
+    "availableQuantity": "Available Quantity",
+    "reservedQuantity": "Reserved Quantity",
+    "warehouseName": "Warehouse Name",
+    "lastUpdateTime": "Last Update Time",
+    "stockInDate": "Stock In Date",
+    "stockOutDate": "Stock Out Date",
+    "quantity": "Quantity",
+    "unitPrice": "Unit Price",
+    "totalAmount": "Total Amount",
+    "operator": "Operator",
+    "remark": "Remark",
+    "batchNumber": "Batch Number",
+    "expiryDate": "Expiry Date",
+    "supplier": "Supplier",
+    "stockInType": "Stock In Type",
+    "stockOutType": "Stock Out Type",
+    "purchaseIn": "Purchase In",
+    "returnIn": "Return In",
+    "transferIn": "Transfer In",
+    "saleOut": "Sale Out",
+    "returnOut": "Return Out",
+    "transferOut": "Transfer Out",
+    "stocktakeDate": "Stocktake Date",
+    "stocktakeStatus": "Stocktake Status",
+    "bookQuantity": "Book Quantity",
+    "actualQuantity": "Actual Quantity",
+    "differenceQuantity": "Difference Quantity",
+    "stocktakeReason": "Stocktake Reason",
+    "pending": "Pending",
+    "processing": "Processing",
+    "completed": "Completed",
+    "cancelled": "Cancelled"
+  },
+  "afterSales": {
+    "title": "After Sales Management",
+    "afterSalesNumber": "After Sales Number",
+    "orderNumber": "Order Number",
+    "customerName": "Customer Name",
+    "afterSalesType": "After Sales Type",
+    "afterSalesReason": "After Sales Reason",
+    "afterSalesStatus": "After Sales Status",
+    "applicationTime": "Application Time",
+    "processTime": "Process Time",
+    "completionTime": "Completion Time",
+    "refundAmount": "Refund Amount",
+    "description": "Description",
+    "solution": "Solution",
+    "processor": "Processor",
+    "customerPhone": "Customer Phone",
+    "productName": "Product Name",
+    "returnGoods": "Return Goods",
+    "exchange": "Exchange",
+    "repair": "Repair",
+    "refund": "Refund",
+    "qualityIssue": "Quality Issue",
+    "sizeIssue": "Size Issue",
+    "colorIssue": "Color Issue",
+    "damagedInTransit": "Damaged in Transit",
+    "notAsDescribed": "Not as Described",
+    "changeOfMind": "Change of Mind",
+    "pending": "Pending",
+    "processing": "Processing",
+    "completed": "Completed",
+    "rejected": "Rejected",
+    "viewDetails": "View Details",
+    "processAfterSales": "Process After Sales",
+    "approveAfterSales": "Approve After Sales",
+    "rejectAfterSales": "Reject After Sales"
+  },
+  "tallySheet": {
+    "title": "Tally Sheet Management",
+    "tallyNumber": "Tally Number",
+    "warehouseName": "Warehouse Name",
+    "tallyDate": "Tally Date",
+    "tallyStatus": "Tally Status",
+    "operator": "Operator",
+    "totalQuantity": "Total Quantity",
+    "totalAmount": "Total Amount",
+    "productList": "Product List",
+    "createTally": "Create Tally",
+    "editTally": "Edit Tally",
+    "deleteTally": "Delete Tally",
+    "confirmTally": "Confirm Tally",
+    "cancelTally": "Cancel Tally",
+    "printTally": "Print Tally",
+    "exportTally": "Export Tally",
+    "draft": "Draft",
+    "confirmed": "Confirmed",
+    "processing": "Processing",
+    "completed": "Completed",
+    "cancelled": "Cancelled"
+  },
+  "workOrder": {
+    "title": "Work Order Management",
+    "workOrderNumber": "Work Order Number",
+    "workOrderType": "Work Order Type",
+    "priority": "Priority",
+    "assignee": "Assignee",
+    "reporter": "Reporter",
+    "workOrderStatus": "Work Order Status",
+    "createTime": "Create Time",
+    "dueTime": "Due Time",
+    "completionTime": "Completion Time",
+    "title": "Title",
+    "description": "Description",
+    "solution": "Solution",
+    "attachment": "Attachment",
+    "comment": "Comment",
+    "maintenance": "Maintenance",
+    "support": "Support",
+    "bug": "Bug",
+    "feature": "Feature",
+    "high": "High",
+    "medium": "Medium",
+    "low": "Low",
+    "urgent": "Urgent",
+    "open": "Open",
+    "inProgress": "In Progress",
+    "resolved": "Resolved",
+    "closed": "Closed",
+    "reopened": "Reopened",
+    "createWorkOrder": "Create Work Order",
+    "assignWorkOrder": "Assign Work Order",
+    "closeWorkOrder": "Close Work Order",
+    "reopenWorkOrder": "Reopen Work Order"
+  },
+  "logisticsOrder": {
+    "title": "Logistics Order Management",
+    "logisticsNumber": "Logistics Number",
+    "trackingNumber": "Tracking Number",
+    "logisticsCompany": "Logistics Company",
+    "senderName": "Sender Name",
+    "senderPhone": "Sender Phone",
+    "senderAddress": "Sender Address",
+    "receiverName": "Receiver Name",
+    "receiverPhone": "Receiver Phone",
+    "receiverAddress": "Receiver Address",
+    "logisticsStatus": "Logistics Status",
+    "shipmentTime": "Shipment Time",
+    "deliveryTime": "Delivery Time",
+    "estimatedDelivery": "Estimated Delivery",
+    "logisticsFee": "Logistics Fee",
+    "weight": "Weight",
+    "volume": "Volume",
+    "packageType": "Package Type",
+    "specialInstructions": "Special Instructions",
+    "pending": "Pending",
+    "shipped": "Shipped",
+    "inTransit": "In Transit",
+    "delivered": "Delivered",
+    "returned": "Returned",
+    "lost": "Lost",
+    "damaged": "Damaged",
+    "trackLogistics": "Track Logistics",
+    "printLabel": "Print Label",
+    "updateStatus": "Update Status"
+  },
+  "paymentRecord": {
+    "title": "Payment Record",
+    "paymentNumber": "Payment Number",
+    "orderNumber": "Order Number",
+    "customerName": "Customer Name",
+    "paymentAmount": "Payment Amount",
+    "paymentMethod": "Payment Method",
+    "paymentStatus": "Payment Status",
+    "paymentTime": "Payment Time",
+    "transactionId": "Transaction ID",
+    "merchantName": "Merchant Name",
+    "remark": "Remark",
+    "cash": "Cash",
+    "bankCard": "Bank Card",
+    "alipay": "Alipay",
+    "wechatPay": "WeChat Pay",
+    "unionPay": "Union Pay",
+    "creditCard": "Credit Card",
+    "pending": "Pending",
+    "paid": "Paid",
+    "failed": "Failed",
+    "refunded": "Refunded",
+    "partialRefund": "Partial Refund",
+    "viewPayment": "View Payment",
+    "refundPayment": "Refund Payment",
+    "exportRecord": "Export Record"
+  },
+  "allocationOrder": {
+    "title": "Allocation Order Management",
+    "allocationNumber": "Allocation Number",
+    "sourceWarehouse": "Source Warehouse",
+    "targetWarehouse": "Target Warehouse",
+    "allocationDate": "Allocation Date",
+    "allocationStatus": "Allocation Status",
+    "operator": "Operator",
+    "approver": "Approver",
+    "totalQuantity": "Total Quantity",
+    "totalAmount": "Total Amount",
+    "reason": "Reason",
+    "remark": "Remark",
+    "productList": "Product List",
+    "draft": "Draft",
+    "submitted": "Submitted",
+    "approved": "Approved",
+    "rejected": "Rejected",
+    "inTransit": "In Transit",
+    "completed": "Completed",
+    "cancelled": "Cancelled",
+    "createAllocation": "Create Allocation",
+    "submitAllocation": "Submit Allocation",
+    "approveAllocation": "Approve Allocation",
+    "rejectAllocation": "Reject Allocation",
+    "confirmReceipt": "Confirm Receipt"
+  },
+  "userManagement": {
+    "title": "User Management",
+    "userList": "User List",
+    "addUser": "Add User",
+    "editUser": "Edit User",
+    "deleteUser": "Delete User",
+    "userId": "User ID",
+    "username": "Username",
+    "realName": "Real Name",
+    "email": "Email",
+    "phone": "Phone",
+    "role": "Role",
+    "department": "Department",
+    "position": "Position",
+    "status": "Status",
+    "createTime": "Create Time",
+    "lastLoginTime": "Last Login Time",
+    "loginCount": "Login Count",
+    "active": "Active",
+    "inactive": "Inactive",
+    "locked": "Locked",
+    "admin": "Admin",
+    "user": "User",
+    "guest": "Guest",
+    "resetPassword": "Reset Password",
+    "changePassword": "Change Password",
+    "lockUser": "Lock User",
+    "unlockUser": "Unlock User",
+    "deleteConfirm": "Are you sure to delete this user?",
+    "batchDelete": "Batch Delete",
+    "exportUsers": "Export Users",
+    "importUsers": "Import Users",
+    "userProfile": "User Profile",
+    "permissions": "Permissions"
+  },
+  "carousel": {
+    "title": "Carousel Management",
+    "carouselList": "Carousel List",
+    "addCarousel": "Add Carousel",
+    "editCarousel": "Edit Carousel",
+    "deleteCarousel": "Delete Carousel",
+    "carouselTitle": "Carousel Title",
+    "carouselImage": "Carousel Image",
+    "linkUrl": "Link URL",
+    "sortOrder": "Sort Order",
+    "status": "Status",
+    "startTime": "Start Time",
+    "endTime": "End Time",
+    "clickCount": "Click Count",
+    "description": "Description",
+    "enabled": "Enabled",
+    "disabled": "Disabled",
+    "uploadImage": "Upload Image",
+    "previewImage": "Preview Image",
+    "imageSize": "Image Size",
+    "recommendedSize": "Recommended Size: 1920x600",
+    "maxFileSize": "Max File Size: 2MB",
+    "supportedFormats": "Supported Formats: JPG, PNG, GIF"
+  },
+  "userProfile": {
+    "avatar": "Avatar",
+    "username": "Username",
+    "nickname": "Nickname",
+    "email": "Email",
+    "phone": "Phone",
+    "uploadAvatar": "Click to Upload",
+    "uploading": "Uploading...",
+    "imageFormatError": "Only JPG/PNG format images are supported!",
+    "imageSizeError": "Image size cannot exceed 2MB!",
+    "supportedFormats": "Supports JPG, PNG formats, file size not exceeding 2MB",
+    "usernameDisabled": "Username cannot be modified",
+    "usernamePlaceholder": "Username cannot be modified",
+    "nicknamePlaceholder": "Please enter nickname",
+    "emailPlaceholder": "Please enter email address",
+    "phonePlaceholder": "Please enter phone number",
+    "usernameRule": "Username length should be 1-20 characters",
+    "nicknameRule": "Nickname cannot exceed 20 characters",
+    "nicknamePatternRule": "Nickname can only contain Chinese, English, numbers, underscores and hyphens",
+    "emailRequired": "Please enter email address",
+    "emailRule": "Please enter a valid email address",
+    "phoneRule": "Please enter a valid phone number",
+    "cancel": "Cancel",
+    "confirmModify": "Confirm Modify",
+    "saving": "Saving...",
+    "avatarUploadSuccess": "Avatar uploaded successfully!",
+    "avatarUploadFailed": "Avatar upload failed, please try again",
+    "profileUpdateSuccess": "Profile updated successfully!",
+    "profileUpdateFailed": "Update failed, please try again",
+    "getUserInfoFailed": "Failed to get user information"
+  },
+  "resetPassword": {
+    "oldPassword": "Old Password",
+    "newPassword": "New Password",
+    "confirmPassword": "Confirm Password",
+    "oldPasswordRequired": "Please enter old password",
+    "newPasswordRule": "New password length should be 6-10 characters",
+    "confirmPasswordRequired": "Please confirm new password",
+    "oldPasswordPlaceholder": "Please enter current password",
+    "newPasswordPlaceholder": "Please enter new password",
+    "confirmPasswordPlaceholder": "Please enter new password again",
+    "passwordMismatch": "The two new passwords do not match!",
+    "success": "Password reset successfully"
   }
 }
