--- a/frontend/src/locales/zh.json
+++ b/frontend/src/locales/zh.json
@@ -60,19 +60,21 @@
     "operation": "操作",
     "status": "状态",
     "createTime": "创建时间",
-    "updateTime": "更新时间"
+    "updateTime": "更新时间",
+    "unknown": "未知"
   },
   "breadcrumb": {
     "home": "首页"
   },
   "goods": {
     "title": "商品管理",
+    "description": "管理平台所有商品相关信息和库存",
     "productName": "商品名称",
     "productCategory": "商品分类",
     "productStatus": "商品状态",
     "productPrice": "商品价格",
     "stock": "库存",
-    "description": "商品描述",
+    "productDescription": "商品描述",
     "createProduct": "新建商品",
     "editProduct": "编辑商品",
     "deleteProduct": "删除商品",
@@ -91,6 +93,7 @@
   },
   "orders": {
     "title": "订单管理",
+    "description": "管理平台所有订单相关信息和流程",
     "orderNumber": "订单号",
     "customerName": "客户姓名",
     "orderStatus": "订单状态",
@@ -110,7 +113,24 @@
   },
   "merchants": {
     "title": "商家管理",
+    "description": "管理平台所有商家信息",
+    "searchPlaceholder": "搜索商家名称、联系人、电话",
+    "statusFilter": "状态筛选",
+    "typeFilter": "类型筛选",
+    "batchDelete": "批量删除",
+    "merchantId": "商家ID",
     "merchantName": "商家名称",
+    "merchantType": "商户类型",
+    "contact": "联系人",
+    "phone": "联系电话",
+    "serviceCharge": "服务费率",
+    "address": "地址",
+    "noPhone": "暂无手机号",
+    "view": "查看",
+    "merchant": "商户",
+    "deleteConfirm": "确定要删除这个商户吗？",
+    "deleteWarning": "删除后将无法恢复！",
+    "confirmDelete": "确定删除",
     "contactPerson": "联系人",
     "contactPhone": "联系电话",
     "merchantStatus": "商家状态",
@@ -119,9 +139,25 @@
     "createMerchant": "新增商家",
     "editMerchant": "编辑商家",
     "viewMerchant": "查看商家",
+    "addMerchant": "添加商家",
+    "merchantDetails": "商家详情",
+    "logoUrl": "Logo地址",
+    "taxNumber": "税号",
+    "businessLicenseNumber": "营业执照号",
+    "inputMerchantName": "请输入商家名称",
+    "merchantNameTooLong": "商家名称不能超过50个字符",
+    "selectMerchantType": "请选择商户类型",
     "active": "激活",
     "inactive": "禁用",
-    "pending": "待审核"
+    "pending": "待审核",
+    "filterResults": "筛选结果",
+    "totalRecords": "共找到 {{total}} 条记录",
+    "keyword": "关键词",
+    "status": "状态",
+    "type": "类型",
+    "pagination": {
+      "showTotal": "第 {{start}}-{{end}} 条/总共 {{total}} 条"
+    }
   },
   "system": {
     "title": "系统设置",
@@ -137,5 +173,446 @@
     "createUser": "新增用户",
     "editUser": "编辑用户",
     "resetPassword": "重置密码"
+  },
+  "login": {
+    "title": "用户登录",
+    "username": "用户名",
+    "password": "密码",
+    "captcha": "验证码",
+    "rememberMe": "记住密码",
+    "loginButton": "登录",
+    "forgotPassword": "忘记密码？",
+    "usernamePlaceholder": "请输入用户名",
+    "passwordPlaceholder": "请输入密码",
+    "captchaPlaceholder": "请输入验证码",
+    "loginSuccess": "登录成功",
+    "loginFailed": "登录失败",
+    "invalidCredentials": "用户名或密码错误",
+    "welcomeBack": "欢迎回来"
+  },
+  "home": {
+    "title": "系统首页",
+    "welcome": "欢迎使用管理系统",
+    "dashboard": "数据看板",
+    "quickAccess": "快速入口",
+    "recentActivity": "最近活动",
+    "systemStatus": "系统状态",
+    "statistics": "统计数据",
+    "totalUsers": "总用户数",
+    "totalOrders": "总订单数",
+    "totalRevenue": "总收入",
+    "todayVisits": "今日访问量"
+  },
+  "notFound": {
+    "title": "页面未找到",
+    "description": "抱歉，您访问的页面不存在",
+    "backHome": "返回首页",
+    "errorCode": "错误代码：404"
+  },
+  "inventory": {
+    "currentStock": "当前库存",
+    "stockIn": "入库管理",
+    "stockOut": "出库管理",
+    "stocktake": "库存盘点",
+    "stockDetails": "出入库明细",
+    "productCode": "商品编码",
+    "productName": "商品名称",
+    "currentQuantity": "当前数量",
+    "availableQuantity": "可用数量",
+    "reservedQuantity": "预留数量",
+    "warehouseName": "仓库名称",
+    "lastUpdateTime": "最后更新时间",
+    "stockInDate": "入库日期",
+    "stockOutDate": "出库日期",
+    "quantity": "数量",
+    "unitPrice": "单价",
+    "totalAmount": "总金额",
+    "operator": "操作员",
+    "remark": "备注",
+    "batchNumber": "批次号",
+    "expiryDate": "过期日期",
+    "supplier": "供应商",
+    "stockInType": "入库类型",
+    "stockOutType": "出库类型",
+    "purchaseIn": "采购入库",
+    "returnIn": "退货入库",
+    "transferIn": "调拨入库",
+    "saleOut": "销售出库",
+    "returnOut": "退货出库",
+    "transferOut": "调拨出库",
+    "stocktakeDate": "盘点日期",
+    "stocktakeStatus": "盘点状态",
+    "bookQuantity": "账面数量",
+    "actualQuantity": "实际数量",
+    "differenceQuantity": "差异数量",
+    "stocktakeReason": "盘点原因",
+    "pending": "待处理",
+    "processing": "处理中",
+    "completed": "已完成",
+    "cancelled": "已取消"
+  },
+  "afterSales": {
+    "title": "售后管理",
+    "afterSalesNumber": "售后单号",
+    "orderNumber": "订单号",
+    "customerName": "客户姓名",
+    "afterSalesType": "售后类型",
+    "afterSalesReason": "售后原因",
+    "afterSalesStatus": "售后状态",
+    "applicationTime": "申请时间",
+    "processTime": "处理时间",
+    "completionTime": "完成时间",
+    "refundAmount": "退款金额",
+    "description": "问题描述",
+    "solution": "解决方案",
+    "processor": "处理人",
+    "customerPhone": "客户电话",
+    "productName": "商品名称",
+    "returnGoods": "退货",
+    "exchange": "换货",
+    "repair": "维修",
+    "refund": "退款",
+    "qualityIssue": "质量问题",
+    "sizeIssue": "尺寸问题",
+    "colorIssue": "颜色问题",
+    "damagedInTransit": "运输损坏",
+    "notAsDescribed": "与描述不符",
+    "changeOfMind": "不想要了",
+    "pending": "待处理",
+    "processing": "处理中",
+    "completed": "已完成",
+    "rejected": "已拒绝",
+    "viewDetails": "查看详情",
+    "processAfterSales": "处理售后",
+    "approveAfterSales": "同意售后",
+    "rejectAfterSales": "拒绝售后"
+  },
+  "tallySheet": {
+    "title": "理货单管理",
+    "tallyNumber": "理货单号",
+    "warehouseName": "仓库名称",
+    "tallyDate": "理货日期",
+    "tallyStatus": "理货状态",
+    "operator": "操作员",
+    "totalQuantity": "总数量",
+    "totalAmount": "总金额",
+    "productList": "商品清单",
+    "createTally": "创建理货单",
+    "editTally": "编辑理货单",
+    "deleteTally": "删除理货单",
+    "confirmTally": "确认理货",
+    "cancelTally": "取消理货",
+    "printTally": "打印理货单",
+    "exportTally": "导出理货单",
+    "draft": "草稿",
+    "confirmed": "已确认",
+    "processing": "处理中",
+    "completed": "已完成",
+    "cancelled": "已取消"
+  },
+  "workOrder": {
+    "title": "工单管理",
+    "workOrderNumber": "工单号",
+    "workOrderType": "工单类型",
+    "priority": "优先级",
+    "assignee": "指派人",
+    "reporter": "报告人",
+    "workOrderStatus": "工单状态",
+    "createTime": "创建时间",
+    "dueTime": "截止时间",
+    "completionTime": "完成时间",
+    "title": "标题",
+    "description": "描述",
+    "solution": "解决方案",
+    "attachment": "附件",
+    "comment": "评论",
+    "maintenance": "维护工单",
+    "support": "支持工单",
+    "bug": "缺陷工单",
+    "feature": "功能工单",
+    "high": "高",
+    "medium": "中",
+    "low": "低",
+    "urgent": "紧急",
+    "open": "打开",
+    "inProgress": "进行中",
+    "resolved": "已解决",
+    "closed": "已关闭",
+    "reopened": "重新打开",
+    "createWorkOrder": "创建工单",
+    "assignWorkOrder": "指派工单",
+    "closeWorkOrder": "关闭工单",
+    "reopenWorkOrder": "重新打开工单"
+  },
+  "logisticsOrder": {
+    "title": "物流单管理",
+    "logisticsNumber": "物流单号",
+    "trackingNumber": "快递单号",
+    "logisticsCompany": "物流公司",
+    "senderName": "发件人",
+    "senderPhone": "发件人电话",
+    "senderAddress": "发件人地址",
+    "receiverName": "收件人",
+    "receiverPhone": "收件人电话",
+    "receiverAddress": "收件人地址",
+    "logisticsStatus": "物流状态",
+    "shipmentTime": "发货时间",
+    "deliveryTime": "送达时间",
+    "estimatedDelivery": "预计送达",
+    "logisticsFee": "物流费用",
+    "weight": "重量",
+    "volume": "体积",
+    "packageType": "包装类型",
+    "specialInstructions": "特殊说明",
+    "pending": "待发货",
+    "shipped": "已发货",
+    "inTransit": "运输中",
+    "delivered": "已送达",
+    "returned": "已退回",
+    "lost": "丢失",
+    "damaged": "损坏",
+    "trackLogistics": "跟踪物流",
+    "printLabel": "打印标签",
+    "updateStatus": "更新状态"
+  },
+  "paymentRecord": {
+    "title": "收款记录",
+    "paymentNumber": "收款单号",
+    "orderNumber": "订单号",
+    "customerName": "客户姓名",
+    "paymentAmount": "收款金额",
+    "paymentMethod": "支付方式",
+    "paymentStatus": "支付状态",
+    "paymentTime": "支付时间",
+    "transactionId": "交易号",
+    "merchantName": "商家名称",
+    "remark": "备注",
+    "cash": "现金",
+    "bankCard": "银行卡",
+    "alipay": "支付宝",
+    "wechatPay": "微信支付",
+    "unionPay": "银联支付",
+    "creditCard": "信用卡",
+    "pending": "待支付",
+    "paid": "已支付",
+    "failed": "支付失败",
+    "refunded": "已退款",
+    "partialRefund": "部分退款",
+    "viewPayment": "查看支付",
+    "refundPayment": "退款",
+    "exportRecord": "导出记录"
+  },
+  "allocationOrder": {
+    "title": "调拨单管理",
+    "allocationNumber": "调拨单号",
+    "sourceWarehouse": "源仓库",
+    "targetWarehouse": "目标仓库",
+    "allocationDate": "调拨日期",
+    "allocationStatus": "调拨状态",
+    "operator": "操作员",
+    "approver": "审批人",
+    "totalQuantity": "总数量",
+    "totalAmount": "总金额",
+    "reason": "调拨原因",
+    "remark": "备注",
+    "productList": "商品清单",
+    "draft": "草稿",
+    "submitted": "已提交",
+    "approved": "已审批",
+    "rejected": "已拒绝",
+    "inTransit": "运输中",
+    "completed": "已完成",
+    "cancelled": "已取消",
+    "createAllocation": "创建调拨单",
+    "submitAllocation": "提交调拨单",
+    "approveAllocation": "审批调拨单",
+    "rejectAllocation": "拒绝调拨单",
+    "confirmReceipt": "确认收货"
+  },
+  "userManagement": {
+    "title": "用户管理",
+    "userList": "用户列表",
+    "addUser": "添加用户",
+    "editUser": "编辑用户",
+    "deleteUser": "删除用户",
+    "userId": "用户ID",
+    "username": "用户名",
+    "realName": "真实姓名",
+    "email": "邮箱",
+    "phone": "手机号",
+    "role": "角色",
+    "department": "部门",
+    "position": "职位",
+    "status": "状态",
+    "createTime": "创建时间",
+    "lastLoginTime": "最后登录时间",
+    "loginCount": "登录次数",
+    "active": "激活",
+    "inactive": "禁用",
+    "locked": "锁定",
+    "admin": "管理员",
+    "user": "普通用户",
+    "guest": "访客",
+    "resetPassword": "重置密码",
+    "changePassword": "修改密码",
+    "lockUser": "锁定用户",
+    "unlockUser": "解锁用户",
+    "deleteConfirm": "确定要删除该用户吗？",
+    "batchDelete": "批量删除",
+    "exportUsers": "导出用户",
+    "importUsers": "导入用户",
+    "userProfile": "用户资料",
+    "permissions": "权限设置"
+  },
+  "carousel": {
+    "title": "轮播图管理",
+    "carouselList": "轮播图列表",
+    "addCarousel": "添加轮播图",
+    "editCarousel": "编辑轮播图",
+    "deleteCarousel": "删除轮播图",
+    "carouselTitle": "轮播图标题",
+    "carouselImage": "轮播图片",
+    "linkUrl": "链接地址",
+    "sortOrder": "排序",
+    "status": "状态",
+    "startTime": "开始时间",
+    "endTime": "结束时间",
+    "clickCount": "点击次数",
+    "description": "描述",
+    "enabled": "启用",
+    "disabled": "禁用",
+    "uploadImage": "上传图片",
+    "previewImage": "预览图片",
+    "imageSize": "图片尺寸",
+    "recommendedSize": "推荐尺寸：1920x600",
+    "maxFileSize": "最大文件大小：2MB",
+    "supportedFormats": "支持格式：JPG, PNG, GIF"
+  },
+  "userProfile": {
+    "avatar": "头像",
+    "username": "用户名",
+    "nickname": "昵称",
+    "email": "邮箱",
+    "phone": "手机号",
+    "uploadAvatar": "点击上传",
+    "uploading": "上传中...",
+    "imageFormatError": "只能上传 JPG/PNG 格式的图片!",
+    "imageSizeError": "图片大小不能超过 2MB!",
+    "supportedFormats": "支持 JPG、PNG 格式，文件大小不超过 2MB",
+    "usernameDisabled": "用户名不可修改",
+    "usernamePlaceholder": "用户名不可修改",
+    "nicknamePlaceholder": "请输入昵称",
+    "emailPlaceholder": "请输入邮箱地址",
+    "phonePlaceholder": "请输入手机号码",
+    "usernameRule": "用户名长度为1-20个字符",
+    "nicknameRule": "昵称不能超过20个字符",
+    "nicknamePatternRule": "昵称只能包含中文、英文、数字、下划线和横线",
+    "emailRequired": "请输入邮箱地址",
+    "emailRule": "请输入有效的邮箱地址",
+    "phoneRule": "请输入有效的手机号码",
+    "cancel": "取消",
+    "confirmModify": "确认修改",
+    "saving": "保存中...",
+    "avatarUploadSuccess": "头像上传成功!",
+    "avatarUploadFailed": "头像上传失败，请重试",
+    "profileUpdateSuccess": "个人信息修改成功!",
+    "profileUpdateFailed": "修改失败，请重试",
+    "getUserInfoFailed": "获取用户信息失败"
+  },
+  "resetPassword": {
+    "oldPassword": "旧密码",
+    "newPassword": "新密码",
+    "confirmPassword": "确认密码",
+    "oldPasswordRequired": "请输入旧密码",
+    "newPasswordRule": "新密码长度为6-10个字符",
+    "confirmPasswordRequired": "请确认新密码",
+    "oldPasswordPlaceholder": "请输入当前密码",
+    "newPasswordPlaceholder": "请输入新密码",
+    "confirmPasswordPlaceholder": "请再次输入新密码",
+    "passwordMismatch": "两次新密码不一致!",
+    "success": "重置密码成功"
+  },
+  "menu": {
+    "home": "首页",
+    "shops": "商家",
+    "goods": "商品",
+    "orders": "订单",
+    "system": "系统设置",
+    "systemSettings": "系统设置",
+    "messageCenter": "消息中心",
+    "quickActions": "快捷操作",
+    "myDashboard": "我的看板",
+    "workspace": "工作台",
+    "securityCenter": "安全中心",
+    "helpSupport": "帮助支持",
+    "merchants": "商家管理",
+    "merchant-account": "商家账号",
+    "withdraw-account": "提现账号",
+    "account-detail": "账户明细",
+    "merchant-withdraw": "商家提现",
+    "settlement-order": "结算订单",
+    "settlement-bill": "结账单",
+    "merchant-application": "商家申请",
+    "device-management": "设备管理",
+    "product-list": "商品列表",
+    "audit-list": "审核列表",
+    "external-product": "外部商品库",
+    "product-category": "商品分类",
+    "recycle-bin": "回收站",
+    "current-stock": "当前库存",
+    "stock-in": "入库",
+    "stock-out": "出库",
+    "stocktake": "盘点",
+    "stock-details": "库存明细",
+    "orders-list": "订单列表",
+    "afterSales": "售后服务",
+    "tallySheet": "理货单",
+    "sortingList": "分拣列表",
+    "payment-record": "收款记录",
+    "allocation-order": "调拨单",
+    "work-order": "工单",
+    "logistics-order": "物流单",
+    "users": "用户管理",
+    "carousel": "轮播图",
+    "user-permissions": "用户权限"
+  },
+  "quickActions": {
+    "addProduct": "快速添加商品",
+    "processOrder": "处理待办订单",
+    "exportData": "导出数据",
+    "exportStarted": "导出任务已开始"
+  },
+  "messages": {
+    "orderAlert": "订单异常提醒",
+    "orderAlertContent": "有3个订单需要紧急处理",
+    "systemUpdate": "系统更新通知",
+    "systemUpdateContent": "系统将在今晚进行维护更新",
+    "auditReminder": "审核提醒",
+    "auditReminderContent": "有新的商家申请待审核",
+    "markAllRead": "全部已读"
+  },
+  "settings": {
+    "appearance": "外观设置",
+    "darkMode": "深色模式",
+    "notifications": "通知设置",
+    "orderNotifications": "订单通知",
+    "systemNotifications": "系统通知"
+  },
+  "help": {
+    "userGuide": "用户指南",
+    "userGuideDesc": "详细的操作指南和功能说明",
+    "shortcuts": "快捷键",
+    "shortcutsDesc": "常用快捷键列表",
+    "contact": "联系支持",
+    "contactDesc": "技术支持联系方式",
+    "save": "保存",
+    "search": "搜索",
+    "new": "新建",
+    "view": "查看",
+    "contactInfo": "技术支持：support@example.com"
+  },
+  "theme": {
+    "switchedToDark": "已切换到深色模式",
+    "switchedToLight": "已切换到浅色模式"
   }
 }
